Upgrade a spring boot 3.0.5 y nueva Mutation. Refactor